# walkterm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
PCB/: README.md
components/NSI/: CMakeLists.txt  NSI.h  NSI_char_table.h
components/cardkb/: CMakeLists.txt  cardkb.h
main/: CMakeLists.txt  walkterm-esp.c
walkterm/: walkterm.ino
walkterm-esp/: sdkconfig
walkterm-esp/main/: CMakeLists.txt  addsqrtbus.h  addsqrtbusStdCharTable.h  walkterm-esp.c
walkterm-main/components/cardkb/: CMakeLists.txt  Kconfig.projbuild  README.md  cardkb.c  cardkb.h  key_table.txt
walkterm-main/components/walktermlib/: .gitignore  CMakeLists.txt  Kconfig.projbuild  walktermlib.c  walktermlib.h
walkterm-main/main/: CMakeLists.txt  main.c
walkterm-ssd1306/: CMakeLists.txt  sdkconfig
walkterm-ssd1306/.cache/clangd/index/: font8x8_basic.h.1D813EA103555BF6.idx  ssd1306.c.3FC6A06653958551.idx  ssd1306.h.387E6B03DA081DE7.idx  ssd1306_i2c_new.c.3A33C1224767575D.idx  ssd1306_spi.c.E10F3157B9214F11.idx  walkterm-ssd1306.c.2E4A9B00077FDA95.idx
walkterm-ssd1306/main/: CMakeLists.txt  walkterm-ssd1306.c
walkterm-st7789/: sdkconfig
walkterm-st7789/.cache/clangd/index/: fontx.c.8D6DDAB5BBCBAFB1.idx  fontx.h.E21AC3B352B54045.idx  main.c.0CD57ABE79E0A856.idx  st7789.c.16D9B2D68EB0A14A.idx  st7789.h.2F557CD7A594EB34.idx  walkterm-st7789.c.C7F9BAB3B653BABF.idx
walkterm-st7789/.zed/: settings.json
walkterm-st7789/main/: console.h  main.c  tcpServer.h
walkterm-wifi6/main/: walkterm-wifi6.c
